* Fix bug in Email Event Handler where emails were being prepared for every inactive event even if they were not configured to be sent.
* Monitor the SSL/TLS certificate keystore for changes, if the file changes reload the keystore. Can be disabled by setting ssl.keystore.watchFile=false in the env.properties file

*Version 3.5.2*
* Improve performance for events by only preparing emails that will be sent.

*Version 3.5.1*
* Fix bug in Event Manager's Event Listeners where listers were getting lost and not being removed when necessary
* Fix bug where generic validation failure messages did not make it into the REST response
* Relax requirement for email event handlers to have active/inactive/escalation recipients.  If no recipients exist then no email is sent.
* Fix backup work items race conditions in system settings listeners
* Publishers now publish attribute changes if configured to during snapshot send
* Fix bug in very narrow case where if an exception occurred in a streamed REST query, failing to close a result set could leave a database connection zombied
* Fix bug in Module.webPath()
* Fix for returning error messages when switching user
* Add edit-ui-pages as a default permission for creating JSON data items
* Fix synchronization issue in virtual server serial sockets. 
* Ensure Global Scripts are imported first so that Meta point and Scripting data sources that are imported at the same time can use the scripts
* Allow emails event handlers to run without recipients to allow thier scripts to execute even though no email is sent
* Fix bug where when only 1 User is logged in they recieve Audit and Do Not Log Events in the UI
* Fix for NPE getting runtime context during startup

*Version 3.5.0*
* Adding data point tags to email template model
* Adding email template help for email event handlers
* Adding Apache commons-text 1.4 as dependency
* Removing Apache commons-lang dependency in favor of commons-lang3